--- a/datatags-app/app/views/backoffice/customization.scala.html
+++ b/datatags-app/app/views/backoffice/customization.scala.html
@@ -23,15 +23,28 @@
 }
 
 @templates.backend("Manage PolicyModels Server", 'customize, scripts, extraHead){
-<div class="row">
-  <div class="col-md-12">
+<div class="row my-2 flex-row">
+  <div class="col flex-grow-1">
     <h1>
-      <div class="float-right"><button onclick="save()" class="btn btn-large btn-primary"><i class="fa fa-save"></i> Save</button></div>
       Server Customization
     </h1>
-    <h3>Front Page Text</h3>
-    <div id="pell"></div>
   </div>
+  <div class="col text-right">
+    <button onclick="save()" class="btn btn-large btn-primary"><i class="fa fa-save"></i> Save</button>
+  </div>
+
 </div>
+  <div class="row my-2">
+    <div class="col">
+      <div class="card border-secondary">
+        <div class="card-header">
+          Front Page Text
+        </div>
+        <div class="card-body">
+          <div id="pell"></div>
+        </div>
+      </div>
+    </div>
+  </div>
 
 }
