--- a/datatags-app/app/views/templates/backend.scala.html
+++ b/datatags-app/app/views/templates/backend.scala.html
@@ -36,7 +36,7 @@
         <li class="nav-item"><a class="nav-link" data-toggle="tooltip" data-placement="bottom" href="http://iq.harvard.edu" title="Institute of Quantitative Social Science" target="_blank">IQSS</a></li>
       </ul>
       <form class="form-inline" method="POST" action="@routes.UsersCtrl.doLogout">
-        <button type="submit" class="btn btn-sm btn-warning"><i class="fa fa-sign-out"> Logout</i></button>
+        <button type="submit" class="btn btn-sm btn-outline-danger"><i class="fa fa-sign-out"></i> Logout</button>
       </form>
     </div>
   </div>
