--- a/datatags-app/app/assets/css/main.less
+++ b/datatags-app/app/assets/css/main.less
@@ -1,6 +1,6 @@
 @import "globals.less";
 body {
-  background-color: @bodyBackground;
+  //background-color: @bodyBackground;
 }
 
 h1, h2, h3 {
@@ -454,7 +454,7 @@ div.help {
     height: auto;
     z-index: 5000;
     border: 1px solid black;
-    border-radius: 5px;
+    border-radius: 0 0 5px 5px;
     padding: 5px;
     box-shadow: 0 8px 8px rgba(0,0,0,.25);
     background-color: #FEFEBD;
@@ -497,6 +497,8 @@ ul.localizations {
 
 .publicLink {
   font-family: Menlo, Inconsolata, 'Courier New', monospace;
+  font-size: .8em;
+  color: rgba(41, 41, 82, 1);
 }
 
 .requestedInterview-welcomeMessage {
@@ -507,4 +509,8 @@ ul.localizations {
   margin: 1em 0;
   padding: 1em;
   font-size: 1.5em;
+}
+
+.pell-button {
+  white-space: nowrap;
 }
