--- a/datatags-app/app/views/backoffice/users/forgotPassword.scala.html
+++ b/datatags-app/app/views/backoffice/users/forgotPassword.scala.html
@@ -11,9 +11,9 @@
 @templates.bsBase("Forgot Password", scripts){
 
 }{
-<div class="row">
-    <div class="col-md-12">
-        <h1>Forgot my password</h1>
+<div class="row my-2">
+    <div class="col">
+        <h1>Forgot My Password</h1>
     </div>
 </div>
 <div class="row">
@@ -25,14 +25,14 @@
                 </div>
             }
 
-            <div class="form-group">
+            <div class="form-group row">
                 <label for="emailInput" class="col-sm-2 col-form-label">Email</label>
                 <div class="col-sm-10">
                     <input type="email" class="form-control" id="emailInput" name="email" value="@email.getOrElse("")" placeholder="Email">
                 </div>
             </div>
 
-            <div class="form-group">
+            <div class="form-group row">
                 <div class="col-md-8">
                     <div class="text-right">
                         <a class="btn btn-secondary" href="/">Cancel</a>
