--- a/datatags-app/app/views/backoffice/versionedPolicyModelViewer.scala.html
+++ b/datatags-app/app/views/backoffice/versionedPolicyModelViewer.scala.html
@@ -19,24 +19,24 @@
 
 @templates.backend("Versioned Policy Model Editor", 'backOffice, scripts ) {
 
-  <div class="row">
-    <div class="col-md-12">
-      <h3>@if(enableEdits){
-        <div class="float-right">
-          <a class="btn btn-secondary" href="@routes.PolicyKitManagementCtrl.showEditVpmPage(vpm.id)">
-            <i class="fa fa-edit"></i> Edit</a>
-        </div>
-      }
+  <div class="row my-2 d-flex flex-row">
+    <div class="col flex-grow-1">
+      <h3>
         @vpm.title
       </h3>
-      <h6>Permalink to latest published version:
-      </h6>
+      <h6>Permalink to latest published version:</h6>
       <a class="publicLink" id="linkToLatest" target="_blank" href="@routes.PolicyKitManagementCtrl.showLatestVersion(vpm.id)">@routes.PolicyKitManagementCtrl.showLatestVersion(vpm.id)</a>
     </div>
+    @if(enableEdits){
+      <div class="col text-right">
+        <a class="btn btn-secondary" href="@routes.PolicyKitManagementCtrl.showEditVpmPage(vpm.id)">
+          <i class="fa fa-edit"></i> Edit</a>
+      </div>
+    }
   </div>
   @for( m <- message ){
-    <div class="row">
-      <div class="col-md-12">
+    <div class="row my-2">
+      <div class="col">
         <div class="alert alert-info alert-dismissable" role="alert">
           <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
           @m
@@ -45,22 +45,25 @@
     </div>
   }
   @if( vpm.note.trim.nonEmpty ) {
-    <div class="row">
-      <div class="col-md-12">
+    <div class="row my-2">
+      <div class="col">
         @vpm.note
       </div>
     </div>
   }
-  <div class="row">
-    <div class="col-md-12">
-      <h4>
-        <div class="float-right">
-          <a class="btn btn-secondary" href="@routes.PolicyKitManagementCtrl.showNewVersionPage(vpm.id)">
-            <i class="fa fa-plus-circle"></i> Add New Version</a>
-        </div>
-        Versions
-        <div class="clearfix"></div>
-      </h4>
+
+  <div class="row my-2 d-flex flex-row">
+    <div class="col flex-grow-1">
+      <h4>Versions</h4>
+    </div>
+    <div class="col text-right">
+        <a class="btn btn-secondary" href="@routes.PolicyKitManagementCtrl.showNewVersionPage(vpm.id)">
+          <i class="fa fa-plus-circle"></i> Add New Version</a>
+    </div>
+  </div>
+
+  <div class="row my-2">
+    <div class="col">
       @if( versions.isEmpty ) {
         <div class="noData">
           This model currently has no versions. @if(enableEdits){Why not <a href="@routes.PolicyKitManagementCtrl.showNewVersionPage(vpm.id)">add one</a>?}
@@ -84,8 +87,8 @@
                   @v._2.map( k=>if(k.model!=null) {k.model.getMetadata.getTitle} else{"Model not loaded"}).getOrElse("Model Missing")
                 </a>
                   @for( kit <- v._2 ) {
-                    @if(kit.messages.nonEmpty){<span class="badge label-warning"><i class="fa fa-warning"></i></span>}
-                    @if(! kit.canRun){<span class="badge label-danger"><i class="fa fa-times-circle"></i> model error</span>
+                    @if(kit.messages.nonEmpty){<span class="badge badge-warning"><i class="fa fa-warning"></i></span>}
+                    @if(! kit.canRun){<span class="badge badge-danger"><i class="fa fa-times-circle"></i> model error</span>
                   }
                 </td>
                 <td>
@@ -98,13 +101,14 @@
                 </td>
                 <td>@Helpers.dateTimeFormat(v._1.lastUpdate)</td>
                 <td>
-                  <a class="btn btn-secondary btn-sm" href="@routes.PolicyKitManagementCtrl.showEditVersionPage(v._1.parentId, v._1.version)"><i class="fa fa-edit"></i> Edit</a>
-                  <button class="btn btn-danger btn-sm" onclick="DeleteVersion.deleteVersion('@v._1.parentId', '@v._1.version')">
+                  <a class="btn btn-outline-secondary btn-sm my-1" href="@routes.PolicyKitManagementCtrl.showEditVersionPage(v._1.parentId, v._1.version)">
+                    <i class="fa fa-edit"></i> Edit</a>
+                  <button class="btn btn-outline-danger btn-sm my-1" onclick="DeleteVersion.deleteVersion('@v._1.parentId', '@v._1.version')">
                     <i class="fa fa-trash-o"></i> Delete
                   </button>
                   @v._2 match {
-                    case None      => {<button type="button" class="btn btn-secondary" disabled>Processing...</button>}
-                    case Some(kit) => {@if(kit.canRun){<a class="btn btn-primary btn-sm" href="@routes.InterviewCtrl.interviewIntro(v._1.parentId, v._1.version)"><i class="fa fa-play"></i> Run</a>}}
+                    case None      => {<button type="button" class="btn btn-secondary my-1" disabled>Processing...</button>}
+                    case Some(kit) => {@if(kit.canRun){<a class="btn btn-primary btn-sm my-1" href="@routes.InterviewCtrl.interviewIntro(v._1.parentId, v._1.version)"><i class="fa fa-play"></i> Run</a>}}
                   }
                 </td>
               </tr>
