--- a/datatags-app/app/views/comps/questionPanel.scala.html
+++ b/datatags-app/app/views/comps/questionPanel.scala.html
@@ -12,8 +12,8 @@
       <div><span class="badge badge-light">@questionNode.getId</span></div>
     }
     @if( enableComments ){
-      <div>
-      @comps.comments("cmnt", pmvKit.dbData.parentId, pmvKit.dbData.version, None, "node", questionNode.getId)
+      <div class="ml-2">
+      @comps.comments("cmnt", pmvKit.dbData.parentId, pmvKit.dbData.version, None, "node", questionNode.getId, "btn-outline-light")
       </div>
     }
   </div>
@@ -27,8 +27,8 @@
   <div class="card-footer text-center">
   @helper.form( action=routes.InterviewCtrl.answer(pmvKit.id.modelId, pmvKit.id.version, questionNode.getId), 'id->"answerForm" ) {
     @for( ans <- questionNode.getAnswers ) {
-      <button type="button" class="btn btn-primary" @if(interactive){
-      onclick="$('#answerText')[0].value='@ans.getAnswerText'; $('#answerForm').submit();"}else{disabled} >
+      <button type="button" @if(interactive){ class="btn btn-primary"
+      onclick="$('#answerText')[0].value='@ans.getAnswerText'; $('#answerForm').submit();"}else{ class="btn btn-outline-primary" disabled} >
       @loc.map( l=>l.localizeAnswer(ans.getAnswerText)).getOrElse(Helpers.makeUpper(ans.getAnswerText))</button>
     }
     @if( interactive ) {
