--- a/datatags-app/app/views/backoffice/commentViewer.scala.html
+++ b/datatags-app/app/views/backoffice/commentViewer.scala.html
@@ -51,7 +51,7 @@
         } else {
           @defining(qKit.model.getDecisionGraph.getNode(cmt.targetContent)) {
             case ask: AskNode => {
-              @comps.questionPanel(ask, qKit, locOpt, Seq(), enableComments=false, interactive=false, showId = true)
+              @comps.questionPanel(ask, qKit, locOpt, Seq(), enableComments=false, interactive=false, showId = true, None)
             }
             case rej: RejectNode => {
               @comps.rejectPanel(rej, qKit, locOpt, Seq(), enableComments=false)
