--- a/datatags-app/app/views/backoffice/versionedPolicyModelEditor.scala.html
+++ b/datatags-app/app/views/backoffice/versionedPolicyModelEditor.scala.html
@@ -48,6 +48,12 @@
           </div>
         </div>
 
+        <div class="col-sm-10">
+          <input type="checkbox" id="statCb" onchange="$('#saveStat')[0].value = $('#statCb')[0].checked" @if(form("saveStat").value.getOrElse(false) == "true") {checked}>
+          <input type="hidden" name="saveStat" id="saveStat" value="@form("saveStat").value.getOrElse(false)">
+          <label for="statCb">Save statistics</label>
+        </div>
+
         <div class="form-group @Helpers.fieldStatus(form("note"))">
           <label for="noteInput" class="col-sm-2 col-form-label">Note</label>
           <div class="col-sm-10">
