--- a/datatags-app/app/views/backoffice/versionedPolicyModelEditor.scala.html
+++ b/datatags-app/app/views/backoffice/versionedPolicyModelEditor.scala.html
@@ -55,6 +55,12 @@
           <label for="statCb">Save statistics</label>
         </div>
 
+        <div class="col-sm-10">
+          <input type="checkbox" id="noteCb" onchange="$('#noteOpt')[0].value = $('#noteCb')[0].checked" @if(form("noteOpt").value.getOrElse(false) == "true") {checked}>
+          <input type="hidden" name="noteOpt" id="noteOpt" value="@form("noteOpt").value.getOrElse(false)">
+          <label for="noteCb">Open note option</label>
+        </div>
+
         <div class="form-group @Helpers.fieldStatus(form("note"))">
           <label for="noteInput" class="col-sm-2 col-form-label">Note</label>
           <div class="col-sm-10">
