Cleanups, better UI around model editing

--- a/datatags-app/app/views/templates/bsBase.scala.html
+++ b/datatags-app/app/views/templates/bsBase.scala.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="@routes.Assets.at("vnd/swal/sweetalert.css")">
     <link rel="stylesheet" href="@routes.Assets.at("css/main.min.css")">
 	  <link rel="stylesheet" href="@routes.Assets.at("css/tags.min.css")">
+	  <link rel="stylesheet" href="@routes.Assets.at("css/styledInputs.min.css")">
     <link rel="icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
 	   @extraHead
     @*@comps.analytics()*@
