--- a/datatags-app/app/views/backoffice/versionedPolicyModelEditor.scala.html
+++ b/datatags-app/app/views/backoffice/versionedPolicyModelEditor.scala.html
@@ -49,19 +49,20 @@
           </div>
         </div>
 
-        <div class="col-sm-10">
-          <input type="checkbox" id="statCb" onchange="$('#saveStat')[0].value = $('#statCb')[0].checked" @if(form("saveStat").value.getOrElse(false) == "true") {checked}>
-          <input type="hidden" name="saveStat" id="saveStat" value="@form("saveStat").value.getOrElse(false)">
-          <label for="statCb">Save statistics</label>
+        <div class="form-group row">
+          <label for="titleInput" class="col-sm-2 col-form-label">Model Options</label>
+          <div class="col-sm-10">
+            <input class="hidden" type="checkbox" id="statCb" onchange="$('#saveStat')[0].value = $('#statCb')[0].checked" @if(form("saveStat").value.getOrElse(false) == "true") {checked}>
+            <label class="buttonLike" for="statCb">Save Usage Statistics</label>
+            <input type="hidden" name="saveStat" id="saveStat" value="@form("saveStat").value.getOrElse(false)">
+
+            <input class="hidden" type="checkbox" id="noteCb" onchange="$('#noteOpt')[0].value = $('#noteCb')[0].checked" @if(form("noteOpt").value.getOrElse(false) == "true") {checked}>
+            <label class="buttonLike" for="noteCb">Allow User Notes</label>
+            <input type="hidden" name="noteOpt" id="noteOpt" value="@form("noteOpt").value.getOrElse(false)">
+          </div>
         </div>
 
-        <div class="col-sm-10">
-          <input type="checkbox" id="noteCb" onchange="$('#noteOpt')[0].value = $('#noteCb')[0].checked" @if(form("noteOpt").value.getOrElse(false) == "true") {checked}>
-          <input type="hidden" name="noteOpt" id="noteOpt" value="@form("noteOpt").value.getOrElse(false)">
-          <label for="noteCb">Open note option</label>
-        </div>
-
-        <div class="form-group @Helpers.fieldStatus(form("note"))">
+        <div class="form-group row @Helpers.fieldStatus(form("note"))">
           <label for="noteInput" class="col-sm-2 col-form-label">Note</label>
           <div class="col-sm-10">
             <textarea id="noteInput" name="note" class="form-control" rows="5">@form("note").value.getOrElse("")</textarea>
@@ -76,7 +77,9 @@
                 <button type="button" onclick='VpmEditor.confirmDelete("@Helpers.jsEscape(form("title").value.get)","@form("id").value.get")' class="btn btn-danger"><i class="fa fa-trash-o"></i> Delete Model</button>
               </div>
             }
-            <a href="@routes.PolicyKitManagementCtrl.showVpmList" class="btn btn-secondary">Cancel</a>
+            @if( ! isNew ){
+              <a href="@routes.PolicyKitManagementCtrl.showVpmPage(form("id").value.get)" class="btn btn-secondary">Cancel</a>
+            }
             <button type="submit" class="btn btn-primary">Save</button>
           </div>
         </div>
